--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h1>당신의 모든 순간을<br>가장 쉽게 기억하세요</h1>
             <p>마지막으로 언제 청소했더라? 언제 약 먹었지?<br>더 이상 고민하지 마세요. '언제더라'가 대신 기억해드립니다.</p>
             <div class="release-notice">
-                <span class="release-badge">🚀 2월 중순 출시예정</span>
+                <span class="release-badge">🚀 2026년 2월 중순 출시 예정</span>
                 <p class="release-sub">지금은 내부 테스트 중입니다.</p>
             </div>
         </section>
