chore: Update footer links (privacy policy, contact email)

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 
         <footer>
             <div class="footer-links">
-                <a href="#">개인정보처리방침</a>
-                <a href="#">서비스 이용약관</a>
-                <a href="mailto:support@proxima.com">문의하기</a>
+                <a href="https://tar-anchovy-790.notion.site/WhenDidI-Privacy-Policy-2e9c7eca8211805ca900f0b7449f3941"
+                    target="_blank">개인정보처리방침 및 서비스 이용약관</a>
+                <a href="mailto:hycenterp@gmail.com">문의하기</a>
             </div>
             <p>&copy; 2026 Proxima. All rights reserved.</p>
         </footer>
