feat: Minimal landing page (pre-launch version)

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 
     <!-- SEO Meta Tags -->
     <title>언제더라 - 당신의 모든 순간을 기억하세요</title>
-    <meta name="description" content="마지막으로 언제 했는지 기억이 안 나시나요? 아이콘으로 간편하게 기록하고 위젯으로 확인하는 가장 쉬운 주기 관리 앱, 언제더라.">
+    <meta name="description" content="마지막으로 언제 했는지 기억이 안 나시나요? 가장 쉬운 주기 관리 앱, 언제더라. 2026년 2월 중순 출시 예정.">
     <meta name="keywords" content="언제더라, 주기관리, 기억, 습관, 위젯, WhenDidI">
     <meta name="author" content="Proxima">
 
     <!-- Open Graph for Social Media -->
-    <meta property="og:title" content="언제더라 - 당신의 모든 순간을 기억하세요">
-    <meta property="og:description" content="간편한 기록, 강력한 위젯. 당신의 기억을 도와주는 스마트한 주기 관리 앱.">
+    <meta property="og:title" content="언제더라 - 2026년 2월 중순 출시 예정">
+    <meta property="og:description" content="당신의 기억을 도와주는 스마트한 주기 관리 앱.">
     <meta property="og:image" content="./assets/icon.png">
-    <meta property="og:url" content="https://your-website-url.com">
+    <meta property="og:url" content="https://proxima-e.github.io/-When-Did-I-WEB/">
     <meta property="og:type" content="website">
 
     <!-- Favicon -->
@@ -27,63 +27,13 @@
 
 <body>
     <div class="container">
-        <header>
-            <div class="logo">
-                <img src="./assets/icon.png" alt="언제더라 로고">
-                <span>언제더라</span>
+        <section class="hero" style="min-height: 100vh;">
+            <div class="logo" style="flex-direction: column; gap: 20px; margin-bottom: 40px;">
+                <img src="./assets/icon.png" alt="언제더라 로고" style="width: 120px; height: 120px; border-radius: 25px;">
+                <span style="font-size: 3rem;">언제더라</span>
             </div>
-            <!-- <nav>
-                <a href="#features" class="footer-links">기능 소개</a>
-            </nav> -->
-        </header>
-
-        <section class="hero">
-            <h1>당신의 모든 순간을<br>가장 쉽게 기억하세요</h1>
-            <p>마지막으로 언제 청소했더라? 언제 약 먹었지?<br>더 이상 고민하지 마세요. '언제더라'가 대신 기억해드립니다.</p>
             <div class="release-notice">
                 <span class="release-badge">🚀 2026년 2월 중순 출시 예정</span>
-                <p class="release-sub">지금은 내부 테스트 중입니다.</p>
-            </div>
-        </section>
-
-        <section id="features" class="features">
-            <h2>주요 기능</h2>
-            <div class="feature-grid">
-                <div class="feature-card">
-                    <div class="feature-icon">📅</div>
-                    <h3>간편한 기록</h3>
-                    <p>복잡한 입력 없이 아이콘 터치 한 번으로 기록하세요. 나만의 맞춤형 아이콘도 만들 수 있습니다.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">📱</div>
-                    <h3>바탕화면 위젯</h3>
-                    <p>앱을 켜지 않아도 괜찮습니다. 홈 화면 위젯에서 바로 확인하고 기록할 수 있습니다.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">☁️</div>
-                    <h3>안전한 동기화</h3>
-                    <p>로그인 한 번으로 모든 데이터를 클라우드에 안전하게 보관하세요. 기기를 변경해도 문제없습니다.</p>
-                </div>
-            </div>
-        </section>
-
-        </section>
-
-        <section id="gallery" class="gallery">
-            <h2>미리보기</h2>
-            <div class="gallery-grid">
-                <div class="screenshot-container">
-                    <img src="./assets/01.jpg" alt="언제더라 스크린샷 1" loading="lazy">
-                </div>
-                <div class="screenshot-container">
-                    <img src="./assets/02.jpg" alt="언제더라 스크린샷 2" loading="lazy">
-                </div>
-                <div class="screenshot-container">
-                    <img src="./assets/03.jpg" alt="언제더라 스크린샷 3" loading="lazy">
-                </div>
-                <div class="screenshot-container">
-                    <img src="./assets/04.jpg" alt="언제더라 스크린샷 4" loading="lazy">
-                </div>
             </div>
         </section>
 
