Add README and commit/push guide comments
- Added README.md with repository structure and push instructions

- Added commit/push guide comments to index.html and _backup.html

--- a/_backup.html
+++ b/_backup.html
@@ -1,4 +1,22 @@
 <!DOCTYPE html>
+<!--
+===============================================================================
+📝 커밋/푸시 안내
+===============================================================================
+이 파일은 출시 후 사용할 전체 기능 버전의 백업 파일입니다.
+출시 후 이 파일의 내용을 index.html에 복사하여 사용하세요.
+
+🔹 WEB 저장소: https://github.com/proxima-e/-When-Did-I-WEB
+🔹 App 저장소: https://github.com/proxima-e/-WhenDidI- (서브모듈로 연결)
+
+📌 변경사항 푸시 방법:
+   Claude에게 "WEB 변경사항 커밋/푸시해줘" 라고 요청하면
+   양쪽 저장소에 자동으로 반영됩니다.
+
+📌 GitHub Pages 배포:
+   https://proxima-e.github.io/-When-Did-I-WEB/
+===============================================================================
+-->
 <html lang="ko">
 
 <head>
