--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
 <!DOCTYPE html>
+<!--
+===============================================================================
+📝 커밋/푸시 안내
+===============================================================================
+이 파일은 WEB 저장소 (Public)와 App 저장소 (Private) 양쪽에 존재합니다.
+
+🔹 WEB 저장소: https://github.com/proxima-e/-When-Did-I-WEB
+🔹 App 저장소: https://github.com/proxima-e/-WhenDidI- (서브모듈로 연결)
+
+📌 변경사항 푸시 방법:
+   Claude에게 "WEB 변경사항 커밋/푸시해줘" 라고 요청하면
+   양쪽 저장소에 자동으로 반영됩니다.
+
+📌 GitHub Pages 배포:
+   https://proxima-e.github.io/-When-Did-I-WEB/
+===============================================================================
+-->
 <html lang="ko">
 
 <head>
