Update icon to new modern design, redesign _backup.html with new features

--- a/_backup.html
+++ b/_backup.html
@@ -33,7 +33,7 @@
     <meta property="og:title" content="언제더라 - 당신의 모든 순간을 기억하세요">
     <meta property="og:description" content="간편한 기록, 강력한 위젯. 당신의 기억을 도와주는 스마트한 주기 관리 앱.">
     <meta property="og:image" content="./assets/icon.png">
-    <meta property="og:url" content="https://your-website-url.com">
+    <meta property="og:url" content="https://proxima-e.github.io/-When-Did-I-WEB/">
     <meta property="og:type" content="website">
 
     <!-- Favicon -->
@@ -50,9 +50,6 @@
                 <img src="./assets/icon.png" alt="언제더라 로고">
                 <span>언제더라</span>
             </div>
-            <!-- <nav>
-                <a href="#features" class="footer-links">기능 소개</a>
-            </nav> -->
         </header>
 
         <section class="hero">
@@ -78,13 +75,26 @@
                     <p>앱을 켜지 않아도 괜찮습니다. 홈 화면 위젯에서 바로 확인하고 기록할 수 있습니다.</p>
                 </div>
                 <div class="feature-card">
+                    <div class="feature-icon">📆</div>
+                    <h3>캘린더 뷰</h3>
+                    <p>한눈에 보는 월별 기록. 특정 스티커로 필터링하여 날짜별 활동 패턴을 파악하세요.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">📊</div>
+                    <h3>통계 분석</h3>
+                    <p>주간, 월간 통계로 나의 습관을 분석하세요. 막대 그래프와 파이 차트로 한눈에!</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">⏱️</div>
+                    <h3>타이머 기능</h3>
+                    <p>정해진 시간 동안 집중하고 자동으로 기록하세요. 뽀모도로 스타일 집중 모드 지원.</p>
+                </div>
+                <div class="feature-card">
                     <div class="feature-icon">☁️</div>
                     <h3>안전한 동기화</h3>
-                    <p>로그인 한 번으로 모든 데이터를 클라우드에 안전하게 보관하세요. 기기를 변경해도 문제없습니다.</p>
+                    <p>Google 로그인 한 번으로 클라우드에 안전하게 보관. 기기를 변경해도 데이터는 그대로.</p>
                 </div>
             </div>
-        </section>
-
         </section>
 
         <section id="gallery" class="gallery">
