--- a/_backup.html
+++ b/_backup.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <!--
 ===============================================================================
-📝 backup2.html - Light Theme Full Version (아이콘 스타일에 맞춘 버전)
+📝 커밋/푸시 안내
 ===============================================================================
-아이콘이 밝은 배경(오프화이트)에 어두운 라인 아트 스타일이므로,
-이 페이지도 같은 톤으로 맞춤.
+이 파일은 출시 후 사용할 전체 기능 버전의 백업 파일입니다.
+출시 후 이 파일의 내용을 index.html에 복사하여 사용하세요.
 
-style.css (기존 다크 테마) 대신 style2.css (라이트 테마)를 사용.
+🔹 WEB 저장소: https://github.com/proxima-e/-When-Did-I-WEB
+🔹 App 저장소: https://github.com/proxima-e/-WhenDidI- (서브모듈로 연결)
+
+📌 변경사항 푸시 방법:
+   "WEB 푸시해줘" 라고 요청하면 WEB 저장소에 자동으로 반영됩니다.
+
+📌 GitHub Pages 배포:
+   https://proxima-e.github.io/-When-Did-I-WEB/
 ===============================================================================
 -->
 <html lang="ko">
@@ -31,8 +38,8 @@ style.css (기존 다크 테마) 대신 style2.css (라이트 테마)를 사용.
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="./assets/icon.png">
 
-    <!-- Styles (Light Theme) -->
-    <link rel="stylesheet" href="style2.css">
+    <!-- Styles -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
