Add English landing page (/en/) with hreflang tags for multilingual SEO

--- a/_backup.html
+++ b/_backup.html
@@ -35,6 +35,11 @@
     <meta property="og:url" content="https://proxima-e.github.io/-When-Did-I-WEB/">
     <meta property="og:type" content="website">
 
+    <!-- hreflang for multilingual SEO -->
+    <link rel="alternate" hreflang="ko" href="https://proxima-e.github.io/-When-Did-I-WEB/">
+    <link rel="alternate" hreflang="en" href="https://proxima-e.github.io/-When-Did-I-WEB/en/">
+    <link rel="alternate" hreflang="x-default" href="https://proxima-e.github.io/-When-Did-I-WEB/en/">
+
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="./assets/icon.png">
 
